--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
                 <div class="spinwrapper">
-                <img src="/images/Profilepic.jpeg" alt="Dominics profile picture">
+                <img src="images/Profilepic.jpeg" alt="Dominics profile picture">
                 </div>
                 <div class="headerbio">
                 <h1>Dominic Tekle</h1>
