--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 </tr>
         </table>
         <hr>
-        <a href="/hobbies.html">My Hobbies</a>
-        <a href="/contactme.html">Contact me</a>
+        <a href="hobbies.html">My Hobbies</a>
+        <a href="contactme.html">Contact me</a>
     </main>
 
     <footer></footer>
